# FYS4411

./: .gitignore  README.md
project1/: CMakeLists.txt  Makefile  Particle.h  README.md  analysis.py  blocking.py  blocking_correlated.npz  blocking_one.py  brute_force_VMC.cpp  brute_force_VMC.h  compile_project  main.cpp  makefile  particle.cpp  particle.h  plot.py  random.cpp  results.py  sampler.cpp  sampler.h  system.cpp  system.h  vmc
project1/Data/: vmc_1d_100p_ana.csv  vmc_1d_100p_num.csv  vmc_1d_10p_ana.csv  vmc_1d_10p_num.csv  vmc_1d_1p_ana.csv  vmc_1d_1p_num.csv  vmc_1d_500p_ana.csv  vmc_1d_500p_num.csv  vmc_2d_100p_ana.csv  vmc_2d_100p_num.csv  vmc_2d_10p_ana.csv  vmc_2d_10p_num.csv  vmc_2d_1p_ana.csv  vmc_2d_1p_num.csv  vmc_2d_500p_ana.csv  vmc_2d_500p_num.csv  vmc_3d_100p_ana.csv  vmc_3d_100p_num.csv  vmc_3d_10p_ana.csv  vmc_3d_10p_num.csv  vmc_3d_1p_ana.csv  vmc_3d_1p_num.csv  vmc_3d_500p_ana.csv  vmc_3d_500p_num.csv
project1/Data/temp_results/: variance_blocking_importance_all_configs.npy  (+4 more)
project1/Hamiltonians/: elliptic_harmonicoscillator.cpp  elliptic_harmonicoscillator.h  hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
project1/InitialStates/: initialstate.cpp  initialstate.h  randomuniform.cpp  randomuniform.h  uniformlattice.cpp  uniformlattice.h
project1/Math/: random.h
project1/Misc/: metropolistest.cpp  metropolistest.h  particle.h  sampler.cpp  sampler.h  standardmetropolistest.cpp  standardmetropolistest.h  system.cpp  system.h  wfsampler.cpp  wfsampler.h  writefile.cpp  writefile.h
project1/Post Analysis/: analysis.py  blocking.py  plot.py  results.py
project1/WaveFunctions/: SimpleGaussian.cpp  SimpleGaussian.h  WaveFunction.cpp  WaveFunction.h  correlated.cpp  correlated.h  simplegaussian.cpp  simplegaussian.h  wavefunction.cpp  wavefunction.h
project1/simple_vmc/: harmonic_osc_1d.cpp  harmonic_osc_1d.h
project2/: CMakeLists.txt  README.md  boltzmann_machinery.py  compile_project  hamiltonian.cpp  hamiltonian.h  main.cpp  netparams.h  neuralquantumstate.cpp  neuralquantumstate.h  optimizer.cpp  optimizer.h  rbm  sampler.cpp  sampler.h
project2/Data/: .directory
project2/Math/: random.cpp
project2/PostProcessing/: README.md  analysis.py  analysis_readme.md  plots.py  processing.py  read_outputs.py
(+576 files in other folders)
